Code refactor
- Moved tests for IllegalArgumentException to CalculateConsolidatedChartHeightTestException.java
- Small changes in variable names
- Deprecated truncate method in StringUtils.java and truncate method tests in StringUtilsTest.java